--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "pandora_box"
 version = "0.5.1"
 authors = ["Alï Polatel <alip@exherbo.org>"]
 edition = "2018"
-description = "Pandora's Box: A helper for SydBox, a ptrace & seccomp based sandbox to make sandboxing practical"
+description = "Pandora's Box: A helper for SydBox, a seccomp-bpf based application sandbox, to make sandboxing practical"
 documentation = "https://sydbox.exherbo.org"
 readme = "README"
 homepage = "https://pink.exherbo.org"
