tests: more work on tests and code coverage
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -140,4 +140,19 @@ check-build: all
 check-code-coverage: check-build
 	${MAKE} ${AM_MAKEFLAGS} -C t check-code-coverage
 
+.PHONY: coveralls
+coveralls:
+	coveralls \
+		--exclude t \
+		--exclude tests \
+		--exclude target \
+		--gcov-options '\-lp'
+
+check-build: all
+	${MAKE} ${AM_MAKEFLAGS} -C syd check-build
+	${MAKE} ${AM_MAKEFLAGS} -C t check-build
+
+check-code-coverage: check-build
+	${MAKE} ${AM_MAKEFLAGS} -C t check-code-coverage
+
 SUBDIRS= syd src data man t .
