sydbox: add the ability to export seccomp-bpf filters to a file with --export <bpf|pfc>:filename
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,7 @@ noinst_SCRIPTS= \
 EXTRA_DIST+= $(noinst_SCRIPTS)
 
 DEFS+= \
+       -DIN_SYDBOX=1 \
        -DDATADIR=\"$(datadir)\" \
        -DGITVERSION=\"$(GITVERSION)\"
 AM_CFLAGS= \
