autotools: improve configure
- print descriptory message in the end.
- fix checks for struct iovec, statx, msghdr, mmsghdr and open_how.
- remove old and useless ptrace checks.
- make sure to fallback to /proc/pid/mem if both struct iovec and
process_vm_readv, process_vm_writev are not found.
- properly fallback to the numbers 310 and 311 if
  __NR_process_vm_{read,write}v are not defined.

Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,11 @@ MAINTAINERCLEANFILES= \
 		      INSTALL
 
 EXTRA_DIST= \
-	    autogen.sh
+	    autogen.sh \
+	    tak/make.txt \
+	    tao/art/art-pink-floyd.txt \
+	    tao/art/art-piper.txt \
+	    tao/art/art-see-emily-play.txt
 
 PANDORA_EXTRA_DIST=\
 		   build.rs \
