sydbox: teach --proc-mem modes of operation
--proc-mem 0: Use cross memory attach if available, /proc otherwise.
--proc-mem 1: Use /proc/pid/mem unconditionally.
--proc-mem 2: Use cross memory attach if available, use /proc otherwise,
              open file once, do not reopen the file for each call.
--proc-mem 3: Use /proc/pid/mem unconditionally,
              open file once, do not reopen the file for each call.
Warning: Modes 2 and 3 may run into too many processes errors.
Use another mode or adapt sysctl fs.nr_open as necessary if
this is the case.

Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -202,6 +202,7 @@ AC_CHECK_HEADERS_ONCE(m4_flatten([
 	sys/wait.h
 	sys/syscall.h
 	linux/openat2.h
+	linux/stat.h
 	linux/uio.h
 	linux/unistd.h
 ]))
