--- a/t/bin-wrappers/sydbox.in
+++ b/t/bin-wrappers/sydbox.in
@@ -1,5 +1,6 @@
 #!/bin/sh
 
+set -x
 if test -n "$SYDBOX_DUMP_ENABLED" && -z "$SHOEBOX"
 then
 	i=1
@@ -16,19 +17,28 @@ then
 	done
 fi
 
+SYDBOX_USE_MEMORY=${SYDBOX_USE_MEMORY:-0}
 if test -z "$SYDBOX_TEST_INSTALLED"
 then
 	if test -z "$SYDBOX_DUMP_ENABLED"
 	then
-		exec "@TOP_BUILDDIR@"/src/sydbox $SYDBOX_TEST_OPTIONS "$@"
+		exec "@TOP_BUILDDIR@"/src/sydbox \
+			-M ${SYDBOX_USE_MEMORY} \
+			$SYDBOX_TEST_OPTIONS "$@"
 	else
-		exec "@TOP_BUILDDIR@"/src/sydbox-dump $SYDBOX_TEST_OPTIONS "$@"
+		exec "@TOP_BUILDDIR@"/src/sydbox-dump \
+			-M ${SYDBOX_USE_MEMORY} \
+			$SYDBOX_TEST_OPTIONS "$@"
 	fi
 else
 	if test -z "$SYDBOX_DUMP_ENABLED"
 	then
-		exec "@BINDIR@"/sydbox $SYDBOX_TEST_OPTIONS "$@"
+		exec "@BINDIR@"/sydbox \
+			-M ${SYDBOX_USE_MEMORY} \
+			$SYDBOX_TEST_OPTIONS "$@"
 	else
-		exec "@LIBEXECDIR@"/sydbox/dump/sydbox-dump $SYDBOX_TEST_OPTIONS "$@"
+		exec "@LIBEXECDIR@"/sydbox/dump/sydbox-dump \
+			-M ${SYDBOX_USE_MEMORY} \
+			$SYDBOX_TEST_OPTIONS "$@"
 	fi
 fi
