--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-# vim: set noet :
+# vim: noet sw=8 sts=8 :
 #
 # Copyright (c) 2005 Junio C Hamano
 #
@@ -143,6 +143,18 @@ parse_option () {
 	--pfc-only=*)
 		pfc_only=${opt#--*=}
 		;;
+	--st|--str|--stra|--strac|--strace)
+		strace=strace
+		tee=t
+		;;
+	--strace=*)
+		strace=${opt#--*=}
+		tee=t
+		;;
+	--strace-only=*)
+		strace_only=${opt#--*=}
+		tee=t
+		;;
 	--va|--val|--valg|--valgr|--valgri|--valgrin|--valgrind)
 		valgrind=memcheck
 		tee=t
@@ -245,6 +257,15 @@ if test -n "$store_arg_to"
 then
 	echo "error: $opt_required_arg requires an argument" >&2
 	exit 1
+fi
+
+if test -n "$strace_only"
+then
+	test -z "$strace" && strace=strace
+	test -z "$verbose" && verbose_only="$strace_only"
+elif test -n "$strace"
+then
+	test -z "$verbose_log" && verbose=t
 fi
 
 if test -n "$valgrind_only"
@@ -524,6 +545,15 @@ if test -n "$pfc_only"
 then
 	test -z "$pfc" && pfc=t
 elif test -n "$pfc"
+then
+	verbose=t
+fi
+
+if test -n "$strace_only"
+then
+	test -z "$strace" && strace=strace
+	test -z "$verbose" && verbose_only="$strace_only"
+elif test -n "$strace"
 then
 	verbose=t
 fi
@@ -871,14 +901,23 @@ maybe_setup_verbose () {
 maybe_teardown_dump () {
 	SYDBOX_DUMP_ENABLED=
 	export SYDBOX_DUMP_ENABLED
-	rm -f "$SHOEBOX"
 }
 
 maybe_teardown_pfc () {
 	SYDBOX_PFC_ENABLED=
 	export SYDBOX_PFC_ENABLED
-	bpf_dump "TEST: ${TEST_NAME}.${TEST_NUMBER}.${test_count}"
-	rm -f "$SHOEBOX_PFC"
+	#bpf_dump "TEST: ${TEST_NAME}.${TEST_NUMBER}.${test_count}"
+}
+
+maybe_teardown_strace () {
+	SYDBOX_STRACE_ENABLED=
+	export SYDBOX_STRACE_ENABLED
+	if test -s "$SHOEBOX_STRACE"; then
+		echo >&4 "STRACE: T${TEST_NAME}.${TEST_NUMBER}.${test_count}"
+		cat >&4 "$SHOEBOX_STRACE"
+		echo >&4 '--<8--'
+	fi
+	# rm -f "$SHOEBOX_STRACE"
 }
 
 maybe_teardown_valgrind () {
@@ -902,9 +941,14 @@ maybe_setup_pfc() {
 	if test -n "$SYDBOX_PFC_ENABLED"
 	then
 		i=1
-		SHOEBOX_PFC=$TRASH_DIRECTORY/${this_test}.${test_count}.pfc
+		mkdir -m 700 -p ${TEST_RESULTS_DIR}
+		SHOEBOX_PFC="$TEST_RESULTS_BASE.${test_count}.pfc"
 		while true; do
-			shoe=$(printf '%s.%02d' "$SHOEBOX_PFC" "$i")
+			if test "$i" -eq 1; then
+				shoe=$(printf '%s' "$SHOEBOX_PFC")
+			else
+				shoe=$(printf '%s.%02d' "$SHOEBOX_PFC" "$i")
+			fi
 			if test -f "$shoe"
 			then
 				i=$(expr "$i" + 1)
@@ -914,13 +958,13 @@ maybe_setup_pfc() {
 				break
 			fi
 		done
-		rm -vf "$SHOEBOX_PFC" 2>/dev/null
+		rm -f "$SHOEBOX_PFC"
 	fi
 	export SYDBOX_PFC_ENABLED # To used by bin-wrappers/sydbox
 	export SHOEBOX_PFC        # To be used by bin-wrappers/sydbox
 }
 
-maybe_setup_dump () {
+maybe_setup_dump() {
 #	if test -z "$dump_only"
 #	then
 #		SYDBOX_DUMP_ENABLED=t
@@ -936,9 +980,14 @@ maybe_setup_dump () {
 	if test -n "$SYDBOX_DUMP_ENABLED"
 	then
 		i=1
-		SHOEBOX=$TRASH_DIRECTORY/${this_test}.${test_count}.sydcore
+		mkdir -m 700 -p ${TEST_RESULTS_DIR}
+		SHOEBOX="$TEST_RESULTS_BASE.${test_count}.sydcore"
 		while true; do
-			shoe=$(printf '%s.%02d' "$SHOEBOX" "$i")
+			if test "$i" -eq 1; then
+				shoe=$(printf '%s' "$SHOEBOX")
+			else
+				shoe=$(printf '%s.%02d' "$SHOEBOX" "$i")
+			fi
 			if test -f "$shoe"
 			then
 				i=$(expr "$i" + 1)
@@ -951,7 +1000,44 @@ maybe_setup_dump () {
 		rm -f "$SHOEBOX"
 	fi
 	export SYDBOX_DUMP_ENABLED # To used by bin-wrappers/sydbox
-	export SHOEBOX # To be used by sydbox-dump
+	export SHOEBOX             # To be used by bin-wrappers/sydbox
+}
+
+maybe_setup_strace () {
+	if test -n "$strace"
+	then
+		SYDBOX_STRACE_ENABLED=t
+	elif test -z "$strace_only"
+	then
+		SYDBOX_STRACE_ENABLED=
+		return
+	else
+		SYDBOX_STRACE_ENABLED=
+		if match_pattern_list $test_count $strace_only
+		then
+			SYDBOX_STRACE_ENABLED=t
+		fi
+	fi
+
+	if test -n "$SYDBOX_STRACE_ENABLED"
+	then
+		i=1
+		SHOEBOX_STRACE=$TRASH_DIRECTORY/${this_test}.${test_count}.strace
+		while true; do
+			shoe=$(printf '%s.%02d' "$SHOEBOX_STRACE" "$i")
+			if test -f "$shoe"
+			then
+				i=$(expr "$i" + 1)
+			else
+				SHOEBOX_STRACE="${shoe}"
+				export SHOEBOX_STRACE
+				break
+			fi
+		done
+		# rm -f "$SHOEBOX_STRACE"
+	fi
+	export SYDBOX_STRACE_ENABLED # To used by bin-wrappers/sydbox
+	export SHOEBOX_STRACE        # To be used by bin-wrappers/sydbox
 }
 
 maybe_setup_valgrind () {
@@ -1092,6 +1178,7 @@ test_run_ () {
 test_start_ () {
 	test_count=$(($test_count+1))
 	maybe_setup_verbose
+	maybe_setup_strace
 	maybe_setup_valgrind
 	maybe_setup_dump
 	maybe_setup_pfc
@@ -1239,6 +1326,25 @@ test_done () {
 	test_atexit_handler
 
 	finalize_junit_xml
+
+	if test -n "$dump"
+	then
+		shopt -s nullglob # FIXME: bashism.
+		for sydcore in "${TEST_RESULTS_BASE}"*.sydcore.*
+		do
+			name="${sydcore%.*sydcore*}"
+			"$TEST_DIRECTORY"/alloc_stats.pl "$name" \
+				< "$sydcore" > "$name".alloc
+			cat "$sydcore"
+		done > "$TRASH_DIRECTORY"/sydcore
+		shopt -u nullglob
+		if test -s "$TRASH_DIRECTORY/sydcore"
+		then
+			"$TEST_DIRECTORY"/alloc_stats.pl test \
+				< "$TRASH_DIRECTORY/sydcore" \
+				> "$TEST_RESULTS_BASE.alloc"
+		fi
+	fi
 
 	if test -z "$HARNESS_ACTIVE"
 	then
