sydbox: fix missing includes broken by deheader
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -201,6 +201,8 @@ AC_CHECK_HEADERS_ONCE(m4_flatten([
 	sys/user.h
 	sys/wait.h
 	sys/syscall.h
+	linux/fs.h
+	linux/mount.h
 	linux/openat2.h
 	linux/stat.h
 	linux/uio.h
