--- a/.builds/x86_64-alpine-edge.yml
+++ b/.builds/x86_64-alpine-edge.yml
@@ -1,20 +1,27 @@
 image: alpine/edge
 arch: x86_64
+artifacts: [ sydbox-test.tar.bz2, sydbox-static.tar.bz2, sydbox-strace.tar.bz2, sydbox-valgrind.tar.bz2 ]
 packages:
 - linux-headers
+- libseccomp
+- libseccomp-dev
+- libseccomp-static
 - libxslt
-- docbook-xsl
+- grep
 - bind-tools
+- perl
+- docbook-xsl
 - libtool
 - m4
 - autoconf
 - automake
 - pkgconf
 - bzip2
-- perl
 - tmux
 - cgdb
 - bash
+- strace
+- valgrind
 - vim
 sources:
 - https://git.sr.ht/~alip/sydbox
@@ -25,6 +32,7 @@ tasks:
     uname -a
     gcc --version
     bash --version
+    diff --help
     perl --version
     libtoolize --version
     autoconf --version
@@ -34,11 +42,31 @@ tasks:
     bzip2 --version || true
     xsltproc --version
     dig -v
+    strace --version
+    valgrind --version
     mkdir root
+- conf_static: |
+    cd sydbox
+    ./autogen.sh
+    CFLAGS="-O0 -g -ggdb" ./configure --enable-static
+- make_static: |
+    cd sydbox
+    make -j V=1
+- check_static: |
+    cd sydbox
+    make -j V=1 check && touch .check_ok
+    cat {syd,t}/test-suite.log || true
+    test -e .check_ok
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-static.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+- clean_static: |
+    cd sydbox
+    make clean
+    rm -f .check_ok
+    rm -fr config.log {syd,t}/test-suite.log t/test-results t/trash*
 - conf: |
     cd sydbox
     ./autogen.sh
-    PKG_CONFIG_PATH=$(readlink -f ../root/lib/pkgconfig) ./configure
+    CFLAGS="-O0 -g -ggdb" ./configure --disable-static
 - make: |
     cd sydbox
     make -j V=1
@@ -47,7 +75,26 @@ tasks:
     make -j V=1 check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-test.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
 - clean: |
     cd sydbox
     make clean
     rm -f .check_ok
+    rm -fr t/test-suite.log t/test-results t/trash*
+- check_strace: |
+    cd sydbox
+    make -j V=1 TEST_OPTIONS="--strace" check && touch .check_ok
+    cat {syd,t}/test-suite.log || true
+    test -e .check_ok
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+- clean_strace: |
+    cd sydbox
+    make clean
+    rm -f .check_ok
+    rm -fr t/test-suite.log t/test-results t/trash*
+- check_valgrind: |
+    cd sydbox
+    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
+    cat {syd,t}/test-suite.log || true
+    test -e .check_ok
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
